# l2g

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: config.rs  dna.rs  engine.rs  evo_vmmc.rs  fitness.rs  io.rs  lib.rs  mutation.rs  nn.rs  pruning.rs  tiling.rs
src/nn/: dna.rs  fll.rs  fll_fixed_particle.rs  fll_temp_only.rs  l2g_nn.rs  microstate.rs  mod.rs  new_nn.rs  timenet.rs
