[package]
name = "l2g"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "l2g"
path = "src/bin/l2g.rs"

[[bin]]
name = "batch_experiment"
path = "src/bin/batch_experiment.rs"

[dependencies]
anyhow = "1.0.75" # better errors
clap = { version = "4.4.6", features = ["derive"] } # commandline parsing
env_logger = "0.10.0"
log = "0.4.20"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
serde = { version = "1.0.193", features = ["derive"] }
threadpool = "1.8.1"
toml = "0.8.8"
vmmc = { path = "crates/vmmc" }
