[package]
name = "l2g"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "l2g"
path = "src/bin/l2g.rs"

[[bin]]
name = "mutation_viz"
path = "src/bin/mutation_viz.rs"

[dependencies]
anyhow = "1.0.75" # better errors
clap = { version = "4.4.6", features = ["derive"] } # commandline parsing
env_logger = "0.10.0"
equationx = "0.1.0"
log = "0.4.20"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rayon = "1.10.0"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
vmmc = { path = "crates/vmmc" }
