[package]
name = "l2g"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-debug]
inherits = "release"
debug = true

[[bin]]
name = "l2g"
path = "src/bin/l2g.rs"

[[bin]]
name = "replay"
path = "src/bin/replay.rs"

[dependencies]
anyhow = "1.0.75" # better errors
clap = { version = "4.4.6", features = ["derive"] } # commandline parsing
equationx = "0.1.0"
fastrand = "2.1.0"
log = "0.4.20"
log4rs = "1.3.0"
plotters = "0.3.6"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rayon = "1.10.0"
runnt = { version = "0.7.0", path = "crates/runnt" }
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
vmmc = { path = "crates/vmmc" }
